# firerain-campus-network

./: CMakeLists.txt  README.md  firerain-campus-network.desktop  flyos-campus-network.desktop  main.cpp
images/: images.qrc
interfaces/: pluginsInterface.h
plugins/: CMakeLists.txt
plugins/example/: CMakeLists.txt  examplePlugins.cpp  examplePlugins.h
plugins/example/resources/: resources.qrc
plugins/h3c/: CMakeLists.txt  H3cPlugins.cpp  H3cPlugins.h  H3cThread.cpp  H3cThread.h  H3cWidget.cpp  H3cWidget.h
plugins/h3c/c3hclient/: auth.c  auth.h  defs.h  main.c
plugins/h3c/resources/: resources.qrc
ui/: mainwindow.cpp  mainwindow.h
ui/pages/: H3cPage.cpp  H3cPage.h
ui/widgets/: LeftWidget.cpp  LeftWidget.h
